WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255820
Fixed unused param warnings in VideoEncoder::createLocalEncoder
https://bugs.webkit.org/show_bug.cgi?id=255820
Summary
Fixed unused param warnings in VideoEncoder::createLocalEncoder
Don Olmstead
Reported
2023-04-21 17:44:29 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2023-04-21 17:50:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13061
EWS
Comment 2
2023-04-21 20:36:32 PDT
Committed
263274@main
(a093df44024f): <
https://commits.webkit.org/263274@main
> Reviewed commits have been landed. Closing PR #13061 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-04-21 20:37:19 PDT
<
rdar://problem/108395988
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug