Fixed unused param warnings in VideoEncoder::createLocalEncoder https://bugs.webkit.org/show_bug.cgi?id=255820

Unreviewed build fix.

Add `UNUSED_PARAM` accordingly.

* Source/WebCore/platform/VideoEncoder.cpp

Canonical link: https://commits.webkit.org/263274@main